--- a/ChatApp/templates/header.html
+++ b/ChatApp/templates/header.html
@@ -1,3 +1,4 @@
+
 <input type="checkbox" id="drawer-toggle" hidden>
 
 {% if page == 'home' %}
@@ -17,7 +18,9 @@
 {% elif page == 'ch' %}
 <header class="header">
   <div class="header-inner">
-    <a class="back-btn" onclick="history.back()"><img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る"></a>
+    <a class="back-btn" href="{{ url_for('home.home_view') }}">
+      <img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る">
+    </a>
     <img class="header-logo" src="{{ url_for('static', filename='img/Tabitalkロゴ.png') }}" alt="ロゴ">
     <span class="header-uname">{{ session['user_name'] }}</span>
 
@@ -32,7 +35,7 @@
 {% elif page == 'chat' %}
 <header class="header">
   <div class="header-inner">
-    <a class="back-btn" onclick="history.back()">
+    <a class="back-btn" href="{{ url_for( 'channels.channels_view', area_id=channels.area_id ) }}">
       <img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る">
     </a>
 
